<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		iphone_8_plus___1
	 *	@date 		Saturday 02nd of September 2023 12:48:00 PM
	 *	@title 		Page 2
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/iphone_8_plus___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_iphone_8_plus___1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__iphone_8_plus___1_ek2"
					android:background="@drawable/_bg__iphone_8_plus___1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="414dp"
					android:layout_height="736dp" />


				<RelativeLayout android:id="@+id/kotak_get_started"
					android:layout_marginTop="497dp"
					android:layout_marginStart="99.8dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/kotak_get_started_1"
						android:background="@drawable/kotak_get_started_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="209.6dp"
						android:layout_height="36.54dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/kotak_don_t_have"
					android:layout_marginTop="552.64dp"
					android:layout_marginStart="99dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<Button   android:id="@+id/kotak_dont_have_1"
						android:background="@drawable/kotak_dont_have_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="209.6dp"
						android:layout_height="36.54dp" />

				</RelativeLayout>

				<TextView android:id="@+id/lunagogo_"
					android:fontFamily="@font/monserratbold"
					android:textStyle="bold"
					android:textSize="23sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/lunagogo__color"
					android:layout_marginLeft="137dp"
					android:layout_marginTop="146dp"
					android:layout_width="163.5dp"
					android:layout_height="39.5dp"
					android:text="@string/lunagogo__string"
					 />

				<TextView android:id="@+id/get_started_lunagogo_"
					android:fontFamily="@font/monserratbold"
					android:textStyle="bold"
					android:textSize="11sp"
					android:textColor="@color/get_started_lunagogo__color"
					android:layout_marginLeft="142dp"
					android:layout_marginTop="509dp"
					android:layout_width="157.5dp"
					android:layout_height="15.5dp"
					android:text="@string/get_started_lunagogo__string"
					 />

				<TextView android:id="@+id/don_t_have_an_account_yet_"
					android:fontFamily="@font/monserratbold"
					android:textStyle="bold"
					android:textSize="11sp"
					android:textColor="@color/lunagogo__color"
					android:layout_marginLeft="125dp"
					android:layout_marginTop="564dp"
					android:layout_width="179.5dp"
					android:layout_height="16.5dp"
					android:text="@string/don_t_have_an_account_yet__string"
					 />


				<RelativeLayout android:id="@+id/gambar_wanita_besar"
					android:layout_marginTop="215dp"
					android:layout_marginStart="106dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/ellipse_2"
						android:background="@drawable/ellipse_2_shape"
						 android:layout_marginStart="12dp"
						android:layout_marginTop="156dp"
						android:layout_width="185.86dp"
						android:layout_height="63.92dp" />

					<ImageView android:id="@+id/_16_removebg_preview_1"
						android:src="@drawable/_16_removebg_preview_1"
						android:contentDescription="_16_removebg_preview_1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="209dp"
						android:layout_height="210.34dp" />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>